Bug 132561 - Export of jpeg or png from Draw shows white/light-grey shadow
Summary: Export of jpeg or png from Draw shows white/light-grey shadow
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha0+
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.1.0 target:7.0.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Graphics-Export
  Show dependency treegraph
 
Reported: 2020-04-30 17:25 UTC by Georg Doll
Modified: 2020-09-13 18:45 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
exported jpeg with "light grey shadow / placeholder" (211.62 KB, image/jpeg)
2020-04-30 17:30 UTC, Georg Doll
Details
here the example document (1.96 MB, application/vnd.oasis.opendocument.graphics)
2020-09-01 16:19 UTC, Georg Doll
Details
here the export file from example document (jpg) (1.15 MB, image/jpeg)
2020-09-01 16:21 UTC, Georg Doll
Details
here the export file from example document (gif) (760.10 KB, image/gif)
2020-09-01 16:22 UTC, Georg Doll
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Georg Doll 2020-04-30 17:25:53 UTC
Description:
I have a draw document. It contains some imported jpegs and text fields with shadow. All items are grouped to one object. When I export this object to jpeg or to png the resulting file shows a light grey placeholder instead of the shadow in the original object. Export as gif (for testing) shows the shadow as expected. I use the latest version 6.3.6.2  (x64) on Windows 10 Pro.

Steps to Reproduce:
1. Open new Draw Document
2. Import dark jpeg
3. Create a text field within this jpeg
4. Write some text, add shadow
5. Group both items
6. Export this group as selection and jpeg

Actual Results:
I see get an jpeg with light grey placeholders where a shadow is expected

Expected Results:
jpeg with proper dark shadow


Reproducible: Always


User Profile Reset: Yes


OpenGL enabled: Yes

Additional Info:
I have already uninstalled LibreOffice, deleted all folders in programs and appdata, restarted the pc and made a blank new installation with no change in the result.
Comment 1 Georg Doll 2020-04-30 17:30:11 UTC
Created attachment 160143 [details]
exported jpeg with "light grey shadow / placeholder"
Comment 2 Buovjaga 2020-08-30 16:58:17 UTC
Please attach an example document.
Set to NEEDINFO.
Change back to UNCONFIRMED after you have provided the document.
Comment 3 Georg Doll 2020-09-01 16:19:48 UTC
Created attachment 164976 [details]
here the example document
Comment 4 Georg Doll 2020-09-01 16:21:25 UTC
Created attachment 164977 [details]
here the export file from example document (jpg)
Comment 5 Georg Doll 2020-09-01 16:22:07 UTC
Created attachment 164978 [details]
here the export file from example document (gif)
Comment 6 Buovjaga 2020-09-01 17:44:19 UTC
Bibisected with win32-6.3 to https://git.libreoffice.org/core/commit/61e8387fa8ab55a04b95839c7c385c163d6de1cd
tdf#128992 Compressing PNG files with alpha channel get a black background

Adding Cc: to Noel Grandin
Comment 7 Noel Grandin 2020-09-03 12:50:16 UTC
I think this has been fixed already, because I can't reproduce on current master
Comment 8 Commit Notification 2020-09-13 14:21:24 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b732e63a0a4b4dcf74995adf7b679d12ecc09db5

tdf#132561 fix png export from Draw

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Buovjaga 2020-09-13 17:03:04 UTC
Verified, thanks!

Arch Linux 64-bit
Version: 7.1.0.0.alpha0+
Build ID: 8ff2889f417fdf9a2a2b849189dfd4e693bb7a45
CPU threads: 8; OS: Linux 5.8; UI render: default; VCL: kf5
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded
Built on 13 September 2020
Comment 10 Commit Notification 2020-09-13 18:45:17 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/b8766a1555fe644fb7dabdfa943e84f6704c9cee

tdf#132561 fix png export from Draw

It will be available in 7.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.