tdf#132561 fix png export from Draw

fixes a regression from
    commit 61e8387fa8ab55a04b95839c7c385c163d6de1cd
    tdf#128992 Compressing PNG files with alpha channel get a black background

Change-Id: I8a225f76072c49f64393bb4b28c4d92c6e85587e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/102548
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit b732e63a0a4b4dcf74995adf7b679d12ecc09db5)